editors/tree-sitter-sngl/test/corpus/components.txt
================
Simple component with param
================

component Button(label = "Click") {
    text(value=label)
}

---

(source_file
  (component_declaration
    name: (identifier)
    (component_param
      name: (identifier)
      (string_literal))
    (statement_block
      (visual_node
        component: (identifier)
        (named_arg
          name: (identifier)
          value: (identifier))))))

================
Component with var
================

component Counter {
    var count = 0
    text(value=count)
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (var_declaration
        (var_spec
          (identifier_list
            (identifier))
          (integer_literal)))
      (visual_node
        component: (identifier)
        (named_arg
          name: (identifier)
          value: (identifier))))))

================
Grouped var declarations
================

component App {
    var (
        name = "World"
        count = 0
    )
    text(value=name)
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (var_declaration
        (var_spec
          (identifier_list
            (identifier))
          (string_literal))
        (var_spec
          (identifier_list
            (identifier))
          (integer_literal)))
      (visual_node
        component: (identifier)
        (named_arg
          name: (identifier)
          value: (identifier))))))

================
Component with event handler
================

component App {
    var count = 0
    button(text="+", @click { count += 1 })
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (var_declaration
        (var_spec
          (identifier_list
            (identifier))
          (integer_literal)))
      (visual_node
        component: (identifier)
        (named_arg
          name: (identifier)
          value: (string_literal))
        (event_arg
          name: (identifier)
          (statement_block
            (assignment_statement
              target: (identifier)
              operator: (assignment_operator)
              value: (integer_literal))))))))

================
If node
================

component App {
    var show = true
    if show {
        text(value="visible")
    }
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (var_declaration
        (var_spec
          (identifier_list
            (identifier))
          (true)))
      (if_node
        (identifier)
        (statement_block
          (visual_node
            component: (identifier)
            (named_arg
              name: (identifier)
              value: (string_literal))))))))

================
If else node
================

component App {
    var show = true
    if show {
        text(value="on")
    } else {
        text(value="off")
    }
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (var_declaration
        (var_spec
          (identifier_list
            (identifier))
          (true)))
      (if_node
        (identifier)
        (statement_block
          (visual_node
            component: (identifier)
            (named_arg
              name: (identifier)
              value: (string_literal))))
        (statement_block
          (visual_node
            component: (identifier)
            (named_arg
              name: (identifier)
              value: (string_literal))))))))

================
For node
================

component App {
    var items = [1, 2, 3]
    for var item = items {
        text(value=item)
    }
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (var_declaration
        (var_spec
          (identifier_list
            (identifier))
          (list_literal
            (integer_literal)
            (integer_literal)
            (integer_literal))))
      (for_node
        (identifier)
        (identifier)
        (statement_block
          (visual_node
            component: (identifier)
            (named_arg
              name: (identifier)
              value: (identifier))))))))

================
For node binding nothing
================

component App {
    for seq.count(3) {
        text(value="tick")
    }
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (for_node
        (method_expression
          receiver: (identifier)
          method: (identifier)
          (integer_literal))
        (statement_block
          (visual_node
            component: (identifier)
            (named_arg
              name: (identifier)
              value: (string_literal))))))))

================
For node with index
================

component App {
    var items = [1, 2, 3]
    for var idx, item = items {
        text(value=item)
    }
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (var_declaration
        (var_spec
          (identifier_list
            (identifier))
          (list_literal
            (integer_literal)
            (integer_literal)
            (integer_literal))))
      (for_node
        (identifier)
        (identifier)
        (identifier)
        (statement_block
          (visual_node
            component: (identifier)
            (named_arg
              name: (identifier)
              value: (identifier))))))))

================
Nested visual nodes
================

component App {
    vbox {
        text(value="hello")
        hbox {
            button(text="ok")
        }
    }
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (visual_node
        component: (identifier)
        (statement_block
          (visual_node
            component: (identifier)
            (named_arg
              name: (identifier)
              value: (string_literal)))
          (visual_node
            component: (identifier)
            (statement_block
              (visual_node
                component: (identifier)
                (named_arg
                  name: (identifier)
                  value: (string_literal))))))))))

================
Nested component declaration does not parse
================

component outer() {
    component inner(x string) {
    }
}

---

(source_file
  (component_declaration
    name: (identifier)
    (statement_block
      (identifier)
      (visual_node
        component: (identifier)
        (ERROR
          (identifier))
        (identifier)
        (statement_block)))))
