editors/tree-sitter-sngl/test/corpus/declarations.txt
================
Import declaration
================

import "app/foo"

---

(source_file
  (import_declaration
    (string_literal)))

================
Import declaration with alias
================

import foo => "app/foo"

---

(source_file
  (import_declaration
    (identifier)
    (string_literal)))

================
Struct declaration
================

struct User {
    name string
    age int = 0
}

---

(source_file
  (struct_declaration
    (identifier)
    (struct_field
      (identifier)
      (type_identifier
        (identifier)))
    (struct_field
      (identifier)
      (type_identifier
        (identifier))
      (integer_literal))))

================
Struct declaration anonymous
================

struct {
    name string
}

---

(source_file
  (struct_declaration
    (struct_field
      (identifier)
      (type_identifier
        (identifier)))))

================
Enum declaration
================

enum Color { Red, Green, Blue }

---

(source_file
  (enum_declaration
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

================
Unit declaration
================

unit duration { ms, s = 1000, m = 60000 }

---

(source_file
  (unit_declaration
    (identifier)
    (identifier)
    (named_arg
      name: (identifier)
      value: (integer_literal))
    (named_arg
      name: (identifier)
      value: (integer_literal))))

================
Const declaration
================

const PI = 3.14

---

(source_file
  (const_declaration
    (const_spec
      (identifier_list
        (identifier))
      (float_literal))))

================
Const grouped
================

const (
    PI = 3.14
    E = 2.71
)

---

(source_file
  (const_declaration
    (const_spec
      (identifier_list
        (identifier))
      (float_literal))
    (const_spec
      (identifier_list
        (identifier))
      (float_literal))))

================
Var declaration top level
================

var counter = 0

---

(source_file
  (var_declaration
    (var_spec
      (identifier_list
        (identifier))
      (integer_literal))))

================
Func declaration arrow
================

func add(a int, b int) => a + b

---

(source_file
  (func_declaration
    (func_name
      (identifier))
    (func_param
      (identifier)
      (type_identifier
        (identifier)))
    (func_param
      (identifier)
      (type_identifier
        (identifier)))
    (binary_expression
      left: (identifier)
      right: (identifier))))

================
Func declaration block
================

func greet(name string) string {
    return name
}

---

(source_file
  (func_declaration
    (func_name
      (identifier))
    (func_param
      (identifier)
      (type_identifier
        (identifier)))
    (type_identifier
      (identifier))
    (statement_block
      (return_statement
        (identifier)))))

================
Window via visual node
================

window #home(title="x") {
    text(value="hi")
}

---

(source_file
  (visual_node
    component: (identifier)
    element_id: (element_ref)
    (named_arg
      name: (identifier)
      value: (string_literal))
    (statement_block
      (visual_node
        component: (identifier)
        (named_arg
          name: (identifier)
          value: (string_literal))))))
